# tally

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
presets/: db.yaml  storage.yaml
src/tally/: __init__.py  cli.py  cluster_ops.py  constants.py  definition.py  disk.py  menu.py  model.py  observe.py  paths.py  preflight.py  probe.py  profiles.py  prompts.py  reconcile.py  remote.py  removal.py  runner.py  screens.py  ui.py  uplink.py  wizard.py
src/tally/stages/: __init__.py  base.py  s1_config.py  s2_image.py  s3_rescue.py  s4_apply.py  s5_bootstrap.py  s6_cilium.py
tests/: test_cluster_ops.py  test_config.py  test_definition.py  test_disk.py  test_dry_run.py  test_menu.py  test_model.py  test_observe.py  test_paths.py  test_probe.py  test_reconcile.py  test_remote.py  test_removal.py  test_rescue_regen.py  test_runner.py  test_s1_artifacts.py  test_screens.py  test_sequencing.py  test_uplink.py
